@@ -1,6 +1,6 @@
 <?php
 /****************************************************************************
- *   Copyright (C) 2005-2007 by Anton E. Lebedevich, Konstantin V. Arkhipov *
+ *   Copyright (C) 2005-2008 by Anton E. Lebedevich, Konstantin V. Arkhipov *
  *                                                                          *
  *   This program is free software; you can redistribute it and/or modify   *
  *   it under the terms of the GNU Lesser General Public License as         *
@@ -145,7 +145,19 @@
 
 			return $stats;
 		}
-
+		
+		public function append($key, $data)
+		{
+			$label = $this->guessLabel($key);
+			
+			if ($this->peers[$label]['object']->isAlive())
+				return $this->peers[$label]['object']->append($key, $data);
+			else
+				$this->checkAlive();
+			
+			return false;
+		}
+		
 		protected function store(
 			$action, $key, &$value, $expires = Cache::EXPIRES_MINIMUM
 		)
