@@ -1,6 +1,6 @@
 <?php
 /****************************************************************************
- *   Copyright (C) 2005-2007 by Anton E. Lebedevich, Konstantin V. Arkhipov *
+ *   Copyright (C) 2005-2008 by Anton E. Lebedevich, Konstantin V. Arkhipov *
  *                                                                          *
  *   This program is free software; you can redistribute it and/or modify   *
  *   it under the terms of the GNU Lesser General Public License as         *
@@ -14,23 +14,27 @@
 	CachePeer:
 	
 		get from cache:
-
+		
 			abstract public function get($key)
-			
+		
+		multi-get from cache:
+		
+			abstract public function getList($keys)
+		
 		uncache:
 		
 			abstract public function delete($key)
-
+		
 		drop everything from cache:
 		
 			abstract public function clean()
-	
+		
 		store this data:
 		
 			public function set(
 				$key, $value, $expires = Cache::EXPIRES_MEDIUM
 			)
-
+		
 		store this data, but only if peer *doesn't* already
 		hold data for this key:
 		
@@ -44,15 +48,19 @@
 			public function replace(
 				$key, $value, $expires = Cache::EXPIRES_MEDIUM
 			)
-
+		
+		add this data to an existing key after existing data:
+		
+			public function append($key, $data)
+		
 		drop object from cache:
-
+		
 			abstract public function delete($key)
 		
 		check if cache alive:
 		
 			abstract public function isAlive()
-
+	
 	Memcached <- CachePeer:
 	
 		public function __construct(
@@ -123,7 +131,21 @@
 			$action, $key, &$value, $expires = Cache::EXPIRES_MEDIUM
 		);
 		
-		final public function set($key, &$value, $expires = Cache::EXPIRES_MEDIUM)
+		abstract public function append($key, $data);
+		
+		public function getList($indexes)
+		{
+			// intentially not array
+			$out = null;
+			
+			foreach ($indexes as $key)
+				if (null !== ($value = $this->get($key)))
+					$out[] = $value;
+			
+			return $out;
+		}
+		
+		final public function set($key, $value, $expires = Cache::EXPIRES_MEDIUM)
 		{
 			return $this->store('set', $key, $value, $expires);
 		}
