@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2005-2007 by Konstantin V. Arkhipov                     *
+ *   Copyright (C) 2005-2008 by Konstantin V. Arkhipov                     *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU Lesser General Public License as        *
@@ -60,6 +60,16 @@
 			$this->pool = array();
 			
 			return $this->peer->clean();
+		}
+		
+		public function append($key, $data)
+		{
+			if (isset($this->pool[$key]) && $this->pool[$key]) {
+				$this->pool[$key] .= $data;
+				return true;
+			}
+			
+			return false;
 		}
 		
 		public function isAlive()
