@@ -93,6 +93,36 @@
 			return true;
 		}
 		
+		public function append($key, $data)
+		{
+			$path = $this->makePath($key);
+			
+			$directory = dirname($path);
+			
+			if (!file_exists($directory)) {
+				try {
+					mkdir($directory);
+				} catch (BaseException $e) {
+					// we're in race
+				}
+			}
+			
+			if (!is_writable($path))
+				return false;
+			
+			try {
+				$fp = fopen($path, 'ab');
+			} catch (BaseException $e) {
+				return false;
+			}
+			
+			fwrite($fp, $data);
+			
+			fclose($fp);
+			
+			return true;
+		}
+		
 		protected function store($action, $key, &$value, $expires = 0)
 		{
 			$path = $this->makePath($key);
@@ -117,9 +147,8 @@
 				return true;
 			
 			// do not replace, when file not exist or expired
-			if (
-				$action == 'replace'
-			) {
+			if ($action == 'replace') {
+				
 				if (!is_readable($path)) {
 					return false;
 				} elseif (filemtime($path) <= $time) {
